Revision history for {{$dist->name}}

{{$NEXT}}

2.007004  2012-04-11 19:53:51 America/Chicago
       - Fix ::OnColumnChange to not obliviate args passed to update

2.007003  2012-02-29 19:56:57 CST6CDT
       - Fix ::Row::NumifyGet breaking when using select/as or columns

2.007002  2012-01-09 16:23:08 CST6CDT
       - Fix POD in AutoRemoveColumns (mattp)
       - Fix multiple level deep Result namespaces (Siddhartha Basu)

2.007001  2011-08-17 22:34:54 CST6CDT
       - Fix dependency (add Carp::Clan)

2.007000  2011-03-14 21:43:20 CST6CDT
       - Add Helper::Row::RelationshipDWIM for handy definition of relationships
       - Significantly simplify implementation of ResultSet::ResultClassDWIM
         (thanks ribasushi)

2.006000  2011-01-31 18:06:56 CST6CDT
       - Add ResultSet::ResultClassDWIM to allow ::HashRefInflator (or ::HRI)
       - Add Schema::GenerateSource for handy addition of subclassed results

2.005000  2010-10-13 19:39:56 CST6CDT
       - Add ResultSet::Me to define predefined searches a more nicely
       - Fix DBIx::Class::Helper::ResultSet::Random to not base off Union
       - Fix DBIx::Class::Helper::ResultSet::Random for MSSQL

2.004000  2010-07-29 21:06:58 CST6CDT
       - Add Row::StorageValues
       - Add Row::OnColumnChange
       - Add Candy exports

2.003002  2010-03-24 23:48:52 CST6CDT
       - Give up on generating test database; I need to test this out
         with development releases

2.003001  2010-03-23 18:41:04 CST6CDT
       - Try again to correctly generate test database

2.003000  2010-03-22 21:27:14 CST6CDT
       - Fix tests to correctly generate test database
       - Stop bundling sqlite database with distribution!
       - Change DBICH::Union into DBICH::SetOperations (nothingmuch)

2.002002  2010-03-14 20:18:59 CST6CDT
       - DBIx::Class::Helper::ResultSet::Random declared RAND() as the
         random function for PostgreSQL when Pg uses RANDOM(). This